# swagger_output.json
@@ -22,67 +22,6 @@
     }
   },
   "paths": {
-    "/favoritaPc": {
-      "post": {
-        "description": "Endpoint para favoritar uma configuração montada",
-        "parameters": [
-          {
-            "name": "Object",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "type": "object",
-              "properties": {
-                "usuario": {
-                  "type": "object",
-                  "properties": {
-                    "email": {
-                      "type": "string",
-                      "example": "string"
-                    }
-                  }
-                },
-                "pecas": {
-                  "type": "object",
-                  "properties": {
-                    "exemplo": {
-                      "type": "string",
-                      "example": "string"
-                    }
-                  }
-                },
-                "tipo": {
-                  "type": "string",
-                  "example": "string"
-                },
-                "jogos": {
-                  "type": "object",
-                  "properties": {
-                    "exemplo": {
-                      "type": "string",
-                      "example": "string"
-                    }
-                  }
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "201": {
-            "description": "Created"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        },
-        "security": [
-          {
-            "jwt": []
-          }
-        ]
-      }
-    },
     "/atualizarListaJogos": {
       "post": {
         "description": "Endpoint em construção, indisponivel no momento",
@@ -132,16 +71,38 @@
     },
     "/montaPc": {
       "post": {
-        "description": "",
+        "description": "Endpoint para calcular a peças necessárias com base em varios requisitos",
         "parameters": [
           {
-            "name": "body",
+            "name": "requisitos",
             "in": "body",
+            "required": true,
             "schema": {
               "type": "object",
               "properties": {
                 "requisitos": {
-                  "example": "any"
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "Armazenamento": {
+                        "type": "string",
+                        "example": " 100 GB available space"
+                      },
+                      "Cpu": {
+                        "type": "string",
+                        "example": " Intel Core i5-2500K@3.3GHz or AMD FX 6300@3.5GHz"
+                      },
+                      "Gpu": {
+                        "type": "string",
+                        "example": " Nvidia GeForce GTX 780 (3 GB) or AMD Radeon R9 290 (4GB)"
+                      },
+                      "Ram": {
+                        "type": "string",
+                        "example": " 8 GB RAM"
+                      }
+                    }
+                  }
                 }
               }
             }
@@ -149,17 +110,59 @@
         ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "Calculado com sucesso.",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "placa": {
+                  "type": "object",
+                  "properties": {
+                    "title": {
+                      "type": "string",
+                      "example": "GeForce GTX 1660"
+                    }
+                  }
+                },
+                "ram": {
+                  "type": "object",
+                  "properties": {
+                    "title": {
+                      "type": "string",
+                      "example": "8GB DDR4"
+                    }
+                  }
+                },
+                "rom": {
+                  "type": "object",
+                  "properties": {
+                    "title": {
+                      "type": "string",
+                      "example": "240GB"
+                    }
+                  }
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
           },
           "500": {
-            "description": "Internal Server Error"
+            "description": "Erro ao calcular.",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "erro": {
+                  "type": "string",
+                  "example": "Menssagem."
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
           }
-        },
-        "security": [
-          {
-            "jwt": []
-          }
-        ]
+        }
       }
     },
     "/usuario/cadastro": {
@@ -266,13 +269,70 @@
         ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "Usuário autenticado com sucesso.",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "autenticado": {
+                  "type": "boolean",
+                  "example": true
+                },
+                "token": {
+                  "type": "string",
+                  "example": "string"
+                },
+                "usuario": {
+                  "type": "object",
+                  "properties": {
+                    "id": {
+                      "type": "number",
+                      "example": 0
+                    },
+                    "nome": {
+                      "type": "string",
+                      "example": "string"
+                    },
+                    "email": {
+                      "type": "string",
+                      "example": "string"
+                    }
+                  }
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
           },
           "401": {
-            "description": "Unauthorized"
+            "description": "Usuário não autenticado.",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "erro": {
+                  "type": "string",
+                  "example": "E-mail ou senha incorreto"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
           },
           "500": {
-            "description": "Internal Server Error"
+            "description": "Erro desconhecido",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "erro": {
+                  "type": "string",
+                  "example": "Menssagem."
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
           }
         }
       }
